fix: dark mode

--- a/dom_exercises/styles.css
+++ b/dom_exercises/styles.css
@@ -1,10 +1,10 @@
 :root {
     --main-font: sans-serif;
     --font-size: 16px;
-    --main-color: #ffbe76;
-    --second-color: #30336b;
+    --main-color: #c7ecee;
+    --second-color: #130f40;
     --main-modal-color: #c7ecee;
-    --second-modal-color: #4834d4;
+    --second-modal-color: #535c68;
     --container-width: 1200px;
 }
 
@@ -153,4 +153,32 @@ img {
 .hidden {
     opacity: 0;
     visibility: hidden;
+}
+
+.dark-mode-btn {
+    position: fixed;
+    z-index: 999;
+    bottom: 1vh;
+    left: 1vw;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    font-size: 2rem;
+    font-weight: bold;
+    background-color: var(--main-color);
+    color: var(--second-color);
+    cursor: pointer;
+    outline: 0;
+    border: 0;
+    transition: all 0.3s ease-out;
+}
+
+.dark-mode-btn:hover {
+    background-color: var(--second-color);
+    color: var(--main-color);
+}
+
+.dark-mode {
+    background-color: var(--second-color);
+    color: var(--main-color);
 }
